style.css
@font-face {
	font-family: nevis-bold;
	src: url(../nevis.ttf);
}

h1 {
	color: #d2d2d2;
	text-shadow: #515151 0 -1px 0;
	text-align: center;
	font: 92px nevis-bold;
}

p {
	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	text-align: center;
}

div {
	text-align: center;
}

a {
	text-decoration: none;
}

a#twitter {
	color: #33CCFF;
}

img.bullet {
	margin-top: 20px;
}

a#github {
	color: #F08C00;	
}

a:hover {
	text-decoration: underline;
}

